<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityeditusu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colormarronlatra"
    tools:context=".Editarcuenta">

    <Button
        android:id="@+id/btnpatras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/atr_s"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <EditText
        android:id="@+id/nombreedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/apellidosedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <Button
        android:id="@+id/btnCambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/editar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />
</androidx.constraintlayout.widget.ConstraintLayout>