<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityregistrarse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colormarronlatra"
    tools:context=".registrar">

    <Button
        android:id="@+id/btninic"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/iniciar_sesi_n"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="296dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/colorrojolatra"
        android:fontFamily="@font/cinzel_decorative"
        android:text="@string/registrarse"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/contrasenia2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenia"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/tel_fono"
        android:inputType="textPersonName"
        android:maxLength="9"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenia2"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/correo"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidos"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorrojolatra"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/colorrojolatra"
        android:textColorHint="@color/colorrojolatra"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

</androidx.constraintlayout.widget.ConstraintLayout>